# eam-talon-streamdeck

./: .gitignore  CMakeLists.txt  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  README.md  StreamDeckSDK.cmake  install.sh  main.cpp
com.talon.speech.sdPlugin/: manifest.json
com.talon.speech.sdPlugin/PropertyInspector/: MonitorStatus.html  sdtools.common.js
